Increased text contrast in helper, messages, codex (fixes #65)

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -240,17 +240,17 @@ td
 	overflow-x: hidden;
 	overflow-y: auto;
 	transition: height 0.5s, top 0.5s;
-	background: #eecc88;
-	text-shadow: -0.0625em -0.0625em rgba(255,255,255,0.5);
-	color: #996622;
+	background: #eecc99;
+	text-shadow: none;
+	color: #665641;
 	z-index: 5100;
 }
 
 #box_messages b,
 #box_messages strong
 {
-	color: #553311;
-	text-shadow: -0.0625em -0.0625em rgba(255,255,255,0.8);
+	color: #0a0907;
+	text-shadow: 0.0625em 0.0625em rgba(0,0,0,0.2);
 }
 
 #box_messages:hover
@@ -278,15 +278,16 @@ td
 	overflow-x: none;
 	overflow-y: auto;
 	background: #eecc99;
-	text-shadow: -0.0625em -0.0625em rgba(255,255,255,0.5);
-	color: #996622;
+	text-shadow: none;
+	color: #665641;
 	display: none;
 }
 
 #box_codex b,
 #box_codex strong
 {
-	color: #221100;
+	color: #0a0907;
+	text-shadow: 0.0625em 0.0625em rgba(0,0,0,0.2);
 }
 
 
@@ -388,13 +389,14 @@ td
 
 .fail
 {
-	color: #cc0000;
+	color: #dd0000;
+	text-shadow: 0.0625em 0.0625em rgba(0,0,0,0.2);
 }
 
 .warning
 {
-	text-shadow: -0.0625em -0.0625em rgba(255,255,255,0.3);
 	color: #cf680f;
+	text-shadow: 0.0625em 0.0625em rgba(0,0,0,0.1);
 }
 
 @keyframes slidein
